--- a/tracker-services/requirements.txt
+++ b/tracker-services/requirements.txt
@@ -19,6 +19,7 @@ curl_cffi==0.12.0
 cycler==0.12.1
 Django==5.2.4
 django-cors-headers==4.7.0
+django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 filelock==3.18.0
