--- a/tracker-services/requirements.txt
+++ b/tracker-services/requirements.txt
@@ -15,11 +15,14 @@ click-repl==0.3.0
 colorama==0.4.6
 config==0.5.1
 contourpy==1.3.2
+cron-descriptor==1.4.5
 curl_cffi==0.12.0
 cycler==0.12.1
 Django==5.2.4
+django-celery-beat==2.8.1
 django-cors-headers==4.7.0
 django-filter==25.1
+django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 filelock==3.18.0
@@ -63,6 +66,7 @@ pycparser==2.22
 Pygments==2.19.2
 PyJWT==2.9.0
 pyparsing==3.2.3
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
