setup celery and redis

--- a/tracker-services/.env
+++ b/tracker-services/.env
@@ -5,3 +5,12 @@ DB_HOST = 'db'
 DB_PORT = 5432
 SECRET_KEY='django-insecure-+^9@0nla4z4s#*63j^)wne%)h&&0+h^^no-bceg_yuv9t6kbeb'
 
+REDIS_URL=redis://redis:6379/0
+
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+YFINANCE_RATE_LIMIT_DELAY=6
+YFINANCE_MAX_RETRIES=3
+YFINANCE_TIMEOUT=30
+YFINANCE_BATCH_SIZE=50
