--- a/tracker-services/Dockerfile
+++ b/tracker-services/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.12.4
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN apt-get update && apt-get install -y postgresql-client
+RUN apt-get update && apt-get install -y \
+    postgresql-client \
+    redis-tools \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-
 
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
