--- a/tracker-services/requirements.txt
+++ b/tracker-services/requirements.txt
@@ -23,10 +23,12 @@ django-celery-beat==2.8.1
 django-cors-headers==4.7.0
 django-filter==25.1
 django-timezone-field==7.1
+django_celery_results==2.6.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 filelock==3.18.0
 flatbuffers==25.2.10
+flower==2.0.1
 fonttools==4.58.5
 frozendict==2.4.6
 fsspec==2025.5.1
@@ -35,6 +37,7 @@ google-pasta==0.2.0
 grpcio==1.73.1
 h5py==3.14.0
 huggingface-hub==0.33.4
+humanize==4.12.3
 idna==3.10
 joblib==1.5.1
 keras==3.10.0
@@ -59,6 +62,7 @@ peewee==3.18.2
 pillow==11.3.0
 platformdirs==4.3.8
 plotly==6.2.0
+prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 protobuf==5.29.5
 psycopg2==2.9.10
@@ -88,6 +92,7 @@ tensorflow==2.19.0
 termcolor==3.1.0
 threadpoolctl==3.6.0
 tokenizers==0.21.2
+tornado==6.5.1
 tqdm==4.67.1
 transformers==4.53.2
 typing_extensions==4.14.1
