--- a/tracker-services/requirements.txt
+++ b/tracker-services/requirements.txt
@@ -22,6 +22,7 @@ Django==5.2.4
 django-celery-beat==2.8.1
 django-cors-headers==4.7.0
 django-filter==25.1
+django-redis==6.0.0
 django-timezone-field==7.1
 django_celery_results==2.6.0
 djangorestframework==3.16.0
